Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-17212

sanity-sec test_36: crash

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • Lustre 2.16.0
    • 3
    • 9223372036854775807

      Client crashes with the following:

      Lustre: DEBUG MARKER: mount -t lustre -o user_xattr,flock,test_dummy_encryption,skpath=/tmp/test-framework-keys trevis-66vm6@tcp:/lustre /mnt/lustre
      Lustre: Test dummy encryption mode enabled
      Lustre: DEBUG MARKER: grep -c /mnt/lustre' ' /proc/mounts
      Lustre: DEBUG MARKER: lsof -t /mnt/lustre
      Lustre: DEBUG MARKER: umount  /mnt/lustre 2>&1
      LustreError: 588361:0:(gss_cli_upcall.c:296:gss_do_ctx_init_rpc()) import has been deactivated
      Lustre: 588408:0:(gss_keyring.c:1039:flush_spec_ctx_cache_kr()) flush busy ctx 00000000ceae75f0(0->lustre-OST0002_UUID, extra ref 1)
      LustreError: 588365:0:(gss_cli_upcall.c:259:gss_do_ctx_init_rpc()) no such obd lustre-OST0005-osc-ffff95a585165000
      LustreError: 588365:0:(gss_cli_upcall.c:259:gss_do_ctx_init_rpc()) Skipped 6 previous similar messages
      BUG: unable to handle kernel NULL pointer dereference at 0000000000000020
      CPU: 1 PID: 588359 Comm: lgss_keyring  4.18.0-477.27.1.el8_8.x86_64 #1
      RIP: 0010:gss_do_ctx_init_rpc+0x84e/0x1100 [ptlrpc_gss]
      Call Trace:
       gss_proc_write_secinit+0x14/0x60 [ptlrpc_gss]
       full_proxy_write+0x53/0x80
       vfs_write+0xa5/0x1b0
       ksys_write+0x4f/0xb0
       do_syscall_64+0x5b/0x1b0
      

            sebastien Sebastien Buisson
            sebastien Sebastien Buisson
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: